# excel_formatter

./: README.md  pyproject.toml
src/: formatter_excel.ipynb  sample.xlsx  sorted_sample (1).xlsx  sorted_sample.xlsx
src/.ipynb_checkpoints/: formatter_excel-checkpoint.ipynb
src/input_files/: sample.xlsx
src/output_files/: output.xlsx
