[tool.poetry]
name = "excel-formatter"
version = "0.1.0"
description = ""
authors = ["keishi.shoji"]
readme = "README.md"
packages = [{include = "excel_formatter"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.2"
jupyterlab-code-formatter = "^2.2.1"
black = "^24.4.2"
isort = "^5.13.2"
jupyter-ai = "^2.18.1"
openpyxl = "^3.1.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
